--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,7 +9,8 @@
 $color-turquoise : #1ABC9C;
 $color-green-sea : #16A085;
 $color-clouds : #ECF0F1;
-$color-grey-light : rgba(0, 0, 0, .03);
+$color-grey-light : #000000;
+$color-grey-light-opacity : 0.03;
 $color-grey : #DCE6F0;
 $color-grey-darker : #606C71;
 $color-white : #FFFFFF;
